--- a/shopapp-Angular/src/app/components/login/login.component.html
+++ b/shopapp-Angular/src/app/components/login/login.component.html
@@ -1,4 +1,5 @@
 <app-header></app-header>
+<form #loginForm="ngForm">
 <div class="container">
   <div class="row">
     <div class="col-md-6 offset-md-3">
@@ -6,17 +7,38 @@
       <div class="login-form mx-auto">
         <h2 class="login-header">Login</h2>
         <div class="form-group">
-          <label for="eamil">Email/Phone</label>
-          <input type="text" class="form-control" id="email">
-          <div class="divider-nospace"></div>
+          <label for="phone">Phone</label>
+          <input type="text" class="form-control" id="phone" name="phone"
+            [(ngModel)]="phoneNumber"
+            (input)="onPhoneChange()"
+            (focus)="loginForm.form.markAsTouched()"
+            required
+            >
+            <div class="divider-nospace"></div>
+            <div *ngIf="phoneNumber.length < 6 && loginForm.form.touched">
+              <p  style="color: rgba(255, 255, 255, 0.192);">
+                Phone phải có ít nhất 6 ký tự</p>
+            </div>
+
         </div>
 
         <div class="mt-5"></div>
         <div class="form-group password-field">
           <label for="password">Password</label>
-          <input type="password" placeholder="Enter at least 3 characters" class="form-control" id="password">
+          <input type="password" placeholder="Enter at least 3 characters" class="form-control" id="password"
+          [(ngModel)]="password"
+          (focus)="loginForm.form.markAsTouched()"
+          required
+          >
+          <div class="divider-nospace"></div>
             <i class="password-toggle fas fa-eye-slash"></i>
-            <div class="divider-nospace"></div>
+            <div *ngIf="password.length < 3 && loginForm.form.touched">
+
+              <p  style="color: rgba(255, 255, 255, 0.192);">
+                  Mật khẩu phải có ít nhất 3 ký tự
+              </p>
+         </div>
+
         </div>
         <div class="form-group">
           <div class="form-check checkbox-text">
@@ -44,4 +66,5 @@
     </div>
   </div>
 </div>
+</form>
 <app-footer></app-footer>
