--- a/shopapp-Angular/src/app/components/login/login.component.html
+++ b/shopapp-Angular/src/app/components/login/login.component.html
@@ -47,13 +47,15 @@
           </div>
         </div>
         <div class="form-group">
-          <select name="" id="" class="form-control access-right">
+          <select name="" id="" class="form-control access-right" (change)="onPhoneChangerole()" [(ngModel)]="selectedRole">
             <option selected disabled>Login permission</option>
-            <option value="">User</option>
-            <option value="">Admin</option>
+            <option *ngFor="let role of roles" [ngValue]="role">
+              {{ role.name }}
+            </option>
           </select>
+
         </div>
-        <button type="button" class="login-button"  (click)="login()" >Login</button>
+        <button type="button" class="login-button"  (click)="login()" > Login </button>
         <div class="divider"></div>
         <p class="text-center">Are you Register<span><a href="#" class="register-link">Are you Create Account</a></span></p>
 
