--- a/shopapp-Angular/src/app/components/login/login.component.scss
+++ b/shopapp-Angular/src/app/components/login/login.component.scss
@@ -68,10 +68,11 @@
   color: rbg(105,233,181);
 }
 
-.access-right{
+.access-right {
   margin-top: 20px;
   width: 200px;
   color: white;
+  background-color: rgb(12, 12, 55) !important;
   border: 1px solid rgb(225, 64, 180);
 }
 
